force-app/main/default/objects/IF_XP_SFDC_001__c/IF_XP_SFDC_001__c.object-meta.xml
<CustomObject>
    <description>CVS 쿠폰 사용에 관한 더미 레코드</description>
    <label>IF XP SFDC 001</label>
    <nameField>
        <displayFormat>CouponIF-{YYYY}{MM}{DD}{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IF XP SFDC 001</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>