force-app/main/default/objects/IF_XP_SFDC_001__c/fields/BurnoutChannel__c.field-meta.xml
<CustomField>
    <fullName>BurnoutChannel__c</fullName>
    <label>BurnoutChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>