force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CouponAmount__c.field-meta.xml
<CustomField>
    <fullName>CouponAmount__c</fullName>
    <label>CouponAmount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>