force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CouponExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>CouponExpiryDate__c</fullName>
    <label>CouponExpiryDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>