force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CouponId__c.field-meta.xml
<CustomField>
    <fullName>CouponId__c</fullName>
    <label>CouponId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>