force-app/main/default/objects/IF_XP_SFDC_001__c/fields/Couponissuedate__c.field-meta.xml
<CustomField>
    <fullName>Couponissuedate__c</fullName>
    <label>Couponissuedate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>