force-app/main/default/objects/IF_XP_SFDC_001__c/fields/Couponmoddate__c.field-meta.xml
<CustomField>
    <fullName>Couponmoddate__c</fullName>
    <label>Couponmoddate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>