force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CouponName__c.field-meta.xml
<CustomField>
    <fullName>CouponName__c</fullName>
    <label>CouponName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>