force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CouponOltCode__c.field-meta.xml
<CustomField>
    <fullName>CouponOltCode__c</fullName>
    <label>CouponOltCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>