force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CouponOltName__c.field-meta.xml
<CustomField>
    <fullName>CouponOltName__c</fullName>
    <label>CouponOltName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>