force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CouponProductCode__c.field-meta.xml
<CustomField>
    <fullName>CouponProductCode__c</fullName>
    <label>CouponProductCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>