force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CouponProductName__c.field-meta.xml
<CustomField>
    <fullName>CouponProductName__c</fullName>
    <label>CouponProductName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>