force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CouponStatus__c.field-meta.xml
<CustomField>
    <fullName>CouponStatus__c</fullName>
    <label>CouponStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>