force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CouponStatusDate__c.field-meta.xml
<CustomField>
    <fullName>CouponStatusDate__c</fullName>
    <label>CouponStatusDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>