force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CouponStatusDatetime__c.field-meta.xml
<CustomField>
    <fullName>CouponStatusDatetime__c</fullName>
    <description>Text인 CouponStatusDate__c 값을 트리거롤 통해 Datetime으로 변환</description>
    <label>CouponStatusDate</label>
    <type>DateTime</type>
</CustomField>