force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CVSChainCode__c.field-meta.xml
<CustomField>
    <fullName>CVSChainCode__c</fullName>
    <label>CVSChainCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>