force-app/main/default/objects/IF_XP_SFDC_001__c/fields/CVSChainName__c.field-meta.xml
<CustomField>
    <fullName>CVSChainName__c</fullName>
    <label>CVSChainName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>