force-app/main/default/objects/IF_XP_SFDC_001__c/fields/ErrorContent__c.field-meta.xml
<CustomField>
    <fullName>ErrorContent__c</fullName>
    <description>[KDCE] 에러가 발생한 경우 원인을 기록함</description>
    <label>Error Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>