force-app/main/default/objects/IF_XP_SFDC_001__c/fields/IsError__c.field-meta.xml
<CustomField>
    <fullName>IsError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] 처리중 Error가 발생하면 True로 업데이트</description>
    <label>IsError</label>
    <type>Checkbox</type>
</CustomField>