force-app/main/default/objects/IF_XP_SFDC_001__c/fields/IsProcess__c.field-meta.xml
<CustomField>
    <fullName>IsProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] 레코드의 처리가 진행되었는지 확인하는 필드</description>
    <label>IsProcess</label>
    <type>Checkbox</type>
</CustomField>