force-app/main/default/objects/IF_XP_SFDC_001__c/listViews/Search.listView-meta.xml
<ListView>
    <fullName>Search</fullName>
    <columns>NAME</columns>
    <columns>IsProcess__c</columns>
    <columns>IsError__c</columns>
    <columns>ErrorContent__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CouponId__c</field>
        <operation>contains</operation>
        <value>50907026239938</value>
    </filters>
    <label>Search</label>
</ListView>